[gd_scene load_steps=11 format=2]

[ext_resource path="res://0x72_DungeonTilesetII_v1.4/sign_texture.png.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/sign/Sign.gd" type="Script" id=2]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/press_e/sprite_0.png" type="Texture" id=3]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/press_e/sprite_1.png" type="Texture" id=4]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/fonts/PixeloidSans.ttf" type="DynamicFontData" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -0.112556, 0.62962, 2.00877, -0.961372, 1.92038, -5.91112, 7.93078, -5.82273, 8.01917, -15.1035, -7.89073, -15.0151, -7.97912, -5.91112, -2.14549, -5.91112, -2.14549, -1.13815 )

[sub_resource type="DynamicFont" id=4]
size = 9
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 5 )

[node name="Sign" type="StaticBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -20.8028 ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="read area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="read area"]
scale = Vector2( 1.36, 1.36 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.375 )
scale = Vector2( 0.48, 0.48 )
shape = SubResource( 2 )

[node name="press_e" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -24.1028 )
frames = SubResource( 3 )
playing = true

[node name="show_area" type="ColorRect" parent="."]
margin_left = -99.3485
margin_top = -112.784
margin_right = -59.3485
margin_bottom = -72.7835
rect_scale = Vector2( 5.04, 2.28 )
color = Color( 1, 1, 1, 0.113725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 5 )
light_mask = 2

[node name="Message" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="Message"]
margin_left = -99.3485
margin_top = -112.784
margin_right = -59.3485
margin_bottom = -72.7835
rect_scale = Vector2( 5.04, 2.28 )
color = Color( 0, 0, 0, 0.239216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="Message"]
margin_left = -92.5427
margin_top = -112.592
margin_right = 94.3499
margin_bottom = -28.0324
rect_scale = Vector2( 0.999998, 1.08 )
custom_fonts/font = SubResource( 4 )
text = "Text Here
"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="read area" to="." method="_on_read_area_body_entered"]
[connection signal="body_exited" from="read area" to="." method="_on_read_area_body_exited"]
